# StairSpeedTest

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  builddebug.sh  res.res
.github/workflows/: build.yml
base/: config.json  pref.ini
base/tools/gui/: gui.html
base/webui/: index.html  index.js
cmake/: copy_runtime_deps.cmake
pngwriter/: CMakeLists.txt
res/: 新建文本文档.json
scripts/: build.windows.release.sh  run_stairspeedtest.py
src/: confbuild.cpp  geoip.cpp  logger.cpp  logger.h  main.cpp  misc.cpp  misc.h  multithread_test.cpp  nodeinfo.h  printmsg.cpp  printout.h  processes.cpp  processes.h  renderer.cpp  renderer.h  socket.cpp  speedtestutil.cpp  speedtestutil.h  tcping.cpp  version.h  webget.cpp  webget.h  webgui_wrapper.cpp  webserver.h  webserver_libevent.cpp
